Updated the homepage, theme CSS & behavior, implemented typeahead (current running with variables in the JS)

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -12,7 +12,7 @@ lang.jumbotron1=Over
 lang.jumbotron2=Yorùbá names and still growing...
 lang.kybtitle=Click here for keys with accents.
 lang.adv-search=Advanced Search
-lang.jumboh31=Join millions of users and add a new name.
+lang.jumboh31=Join other users and add a new name.
 lang.jumboh32=Submit a name »
 lang.latest-search=Latest Searches
 lang.latest-add=Latest Addition
