Added single entry page & made a few modifications to html & CSS

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -18,3 +18,15 @@ lang.latest-search=Latest Searches
 lang.latest-add=Latest Addition
 lang.most-popular=Most Popular
 lang.name-of-day=Name of the day
+lang.play-sound=Click to here
+lang.submitby=Submitted by:
+lang.pronounciation=Pronounciation:
+lang.share=Share 
+lang.improve-entry=Improve this entry 
+lang.meaningof=Meaning of 
+lang.storyof=Little story about this name
+lang.morphology=Morphology
+lang.etymology=Etymology
+lang.geolocation=Geolocation
+lang.variants=Variants
+lang.see-also=See also
