Search result ambiguous page. @Dade, please fix the variables for the entry attributes.

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -30,3 +30,4 @@ lang.etymology=Etymology
 lang.geolocation=Geolocation
 lang.variants=Variants
 lang.see-also=See also
+lang.entryfoundfor=Entries found for - 
