YOR-50 Added more dummy entry for name fields. Updated template to show more dummy fields

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -24,10 +24,12 @@ lang.pronounciation=Pronounciation:
 lang.share=Share 
 lang.improve-entry=Improve this entry 
 lang.meaningof=Meaning of 
+lang.extendedmeaningof=Extended Meaning
 lang.storyof=Little story about this name
 lang.morphology=Morphology
 lang.etymology=Etymology
 lang.geolocation=Geolocation
 lang.variants=Variants
 lang.see-also=See also
-lang.entryfoundfor=Entries found for - 
+lang.entryfoundfor=Entries found for -
+lang.commonin=Common in
