YOR-60 Exteded the front end to have a view through which names can be suggested

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -21,9 +21,9 @@ lang.name-of-day=Name of the day
 lang.play-sound=Click to here
 lang.submitby=Submitted by:
 lang.pronounciation=Pronounciation:
-lang.share=Share 
-lang.improve-entry=Improve this entry 
-lang.meaningof=Meaning of 
+lang.share=Share
+lang.improve-entry=Improve this entry
+lang.meaningof=Meaning of
 lang.extendedmeaningof=Extended Meaning
 lang.storyof=Little story about this name
 lang.morphology=Morphology
@@ -33,3 +33,10 @@ lang.variants=Variants
 lang.see-also=See also
 lang.entryfoundfor=Entries found for -
 lang.commonin=Common in
+
+
+lang.submitname.heading=Submit a new name
+lang.submitname.entername=Please enter your new name here
+lang.submitname.entermeaning=If you know, please tell us the meaning and/or history of the name
+lang.submitname.enterlocation=Where did you hear or were given the name
+lang.submitname.enteremail=Email address to send confirmation of new word submission
