Improve entry front page

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -40,3 +40,6 @@ lang.submitname.entername=Please enter your new name here
 lang.submitname.entermeaning=If you know, please tell us the meaning and/or history of the name
 lang.submitname.enterlocation=Where did you hear or were given the name
 lang.submitname.enteremail=Email address to send confirmation of new word submission
+
+lang.improve-entry.help-us=Help us improve 
+lang.improve-entry.sub-text=Perhaps you might have a story to share about this name, simply add something we missed, or expand a definition.
