YOR-60 If name already in system, prevent submision, notify user, and provide the link to view the name

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -35,11 +35,14 @@ lang.entryfoundfor=Entries found for -
 lang.commonin=Common in
 
 
+
 lang.submitname.heading=Submit a new name
 lang.submitname.entername=Please enter your new name here
 lang.submitname.entermeaning=If you know, please tell us the meaning and/or history of the name
 lang.submitname.enterlocation=Where did you hear or were given the name
 lang.submitname.enteremail=Email address to send confirmation of new word submission
+lang.submitname.nameexists=The name already exist in the system
+lang.submitname.viewentry=View Entry
 
-lang.improve-entry.help-us=Help us improve 
+lang.improve-entry.help-us=Help us improve
 lang.improve-entry.sub-text=Perhaps you might have a story to share about this name, simply add something we missed, or expand a definition.
