FE-11 Added  improve-entry(as a modal), disambiguous, contact-us & about-us page(s). Deleted the initial improve-entry page, updated search input keyboard css, removed some dead links & improved the file structure.

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -37,7 +37,8 @@ lang.commonin=Common in
 
 
 lang.submitname.heading=Submit a new name
-lang.submitname.entername=Please enter your new name here
+lang.submitname.entername=Enter new name here
+lang.submitname.enternameplch=Enter suggested name here...
 lang.submitname.entermeaning=If you know, please tell us the meaning and/or history of the name
 lang.submitname.enterlocation=Where did you hear or were given the name
 lang.submitname.enteremail=Email address to send confirmation of new word submission
@@ -46,3 +47,7 @@ lang.submitname.viewentry=View Entry
 
 lang.improve-entry.help-us=Help us improve
 lang.improve-entry.sub-text=Perhaps you might have a story to share about this name, simply add something we missed, or expand a definition.
+
+lang.entry-not-found.no-match=Oops! No match found for 
+lang.entry-not-found.suggest-text=Would you like to submit the name to our database? Kindly fill in the details below.
+lang.entry-not-found.minikeyb-text=Please use the Yorùbá mini keyboard for characters with tonal marks.
