Added side bar to single result page. un-hardcoded the name count on homepage

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -17,6 +17,7 @@ lang.jumboh32=Submit a name »
 lang.latest-search=Latest Searches
 lang.latest-add=Latest Addition
 lang.most-popular=Most Popular
+lang.most-popular-names=Most Popular Names
 lang.name-of-day=Name of the day
 lang.play-sound=Click to here
 lang.submitby=Submitted by:
