Added controller for /team. Updated message bundle a lil bit

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -52,3 +52,10 @@ lang.improve-entry.sub-text=Perhaps you might have a story to share about this n
 lang.entry-not-found.no-match=Oops! No match found for 
 lang.entry-not-found.suggest-text=Would you like to submit the name to our database? Kindly fill in the details below.
 lang.entry-not-found.minikeyb-text=Please use the Yorùbá mini keyboard for characters with tonal marks.
+
+lang.join-the-team=Join the team
+lang.amazing-team=Our Amazing Team
+lang.what-is-yorubaname=What is YorubaName.com
+lang.how-names-collected=How did we go about collecting names
+lang.about-tts=Better than a pronunciation guide: listen to the names
+lang.lets-build-together=Let's build up this database together
