Based on feedback updated/improve the search, name not found, offer to suggest, flow

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -51,6 +51,9 @@ lang.improve-entry.sub-text=Perhaps you might have a story to share about this n
 
 lang.entry-not-found.no-match=Oops! No match found for 
 lang.entry-not-found.suggest-text=Would you like to submit the name to our database? Kindly fill in the details below.
+lang.entry-not-found.suggest-pretext=Would you like to submit the name to our database?
+lang.entry-not-found.similar-names=Find below names that could be similar
+lang.go-to-suggest-linktext=Kindly go to the name submission page.
 lang.entry-not-found.minikeyb-text=Please use the Yorùbá mini keyboard for characters with tonal marks.
 
 lang.join-the-team=Join the team
