--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -34,6 +34,8 @@ lang.variants=Variants
 lang.see-also=See also
 lang.entryfoundfor=Entries found for -
 lang.commonin=Common in
+lang.number-of-names=Number of names
+lang.name-listed-by-alphabets=Names listed by alphabets
 
 
 
