Corrected some of the feedbacks on website

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -9,7 +9,7 @@ lang.blog=Blog
 lang.language=Language
 lang.search-plchol=Type any Yorùbá name here...
 lang.jumbotron1=Over
-lang.jumbotron2=Yorùbá names and still growing...
+lang.jumbotron2=Yorùbá names and growing...
 lang.kybtitle=Click here for keys with accents.
 lang.adv-search=Advanced Search
 lang.jumboh31=Join other users and add a new name.
@@ -35,7 +35,7 @@ lang.see-also=See also
 lang.entryfoundfor=Entries found for -
 lang.commonin=Common in
 lang.number-of-names=Number of names
-lang.name-listed-by-alphabets=Names listed by alphabets
+lang.name-listed-by-alphabets=Names listed by letters
 
 
 
