Showing Famous People and Medialink

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -20,8 +20,8 @@ lang.most-popular=Most Popular
 lang.most-popular-names=Most Popular Names
 lang.name-of-day=Name of the day
 lang.play-sound=Click to here
-lang.submitby=Submitted by:
-lang.pronounciation=Pronounciation:
+lang.submitby=Submitted by
+lang.pronounciation=Pronounciation
 lang.share=Share
 lang.improve-entry=Improve this entry
 lang.meaningof=Meaning of
@@ -36,8 +36,8 @@ lang.entryfoundfor=Entries found for -
 lang.commonin=Common in
 lang.number-of-names=Number of names
 lang.name-listed-by-alphabets=Names listed by alphabets
-
-
+lang.famous-persons=Famous Persons
+lang.media-links=Media Links
 
 lang.submitname.heading=Submit a new name
 lang.submitname.entername=Enter new name here
