Updated About text

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -61,6 +61,10 @@ lang.entry-not-found.minikeyb-text=Please use the Yorùbá mini keyboard for cha
 lang.join-the-team=Join the team
 lang.amazing-team=Our Amazing Team
 lang.what-is-yorubaname=What is YorubaName.com
+lang.how-to-use=How to Use the Dictionary
+lang.work-in-progress=Entries are a Work-in-Progress
+lang.about-tone-mark=To Tone-Mark or Not to Tone-Mark
 lang.how-names-collected=How did we go about collecting names
-lang.about-tts=Better than a pronunciation guide: listen to the names
+lang.about-tts=Audio Prompts: Hearing the Names
+lang.join-us-lex=Join us as a Lexicographer!
 lang.lets-build-together=Let's build up this database together
