Changed Etymology to Gloss

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -7,7 +7,7 @@ lang.logreg=Login | Register
 lang.contact=Contact Us
 lang.blog=Blog
 lang.language=Language
-lang.search-plchol=Type any Yorùbá name here...
+lang.search-plchol=Type any Yorùbá name here and press "Enter"...
 lang.jumbotron1=Over
 lang.jumbotron2=Yorùbá names and growing...
 lang.kybtitle=Click here for keys with accents.
@@ -28,7 +28,7 @@ lang.meaningof=Meaning of
 lang.extendedmeaningof=Extended Meaning
 lang.storyof=Little story about this name
 lang.morphology=Morphology
-lang.etymology=Etymology
+lang.etymology=Gloss
 lang.geolocation=Geolocation
 lang.variants=Variants
 lang.see-also=See also
