Updated the about and team page

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 lang.welcome=Welcome
 lang.home=Home
-lang.about=About Us
+lang.about=About
 lang.donate=Donate
 lang.volunteer=Volunteer
 lang.logreg=Login | Register
@@ -68,3 +68,4 @@ lang.how-names-collected=How did we go about collecting names
 lang.about-tts=Audio Prompts: Hearing the Names
 lang.join-us-lex=Join us as a Lexicographer!
 lang.lets-build-together=Let's build up this database together
+lang.how-to-support=I would like to support you in some way… but how?
