Integragting names with the tts service

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -19,7 +19,7 @@ lang.latest-add=Latest Addition
 lang.most-popular=Most Popular
 lang.most-popular-names=Most Popular Names
 lang.name-of-day=Name of the day
-lang.play-sound=Click to here
+lang.play-sound=Click to hear pronunciation
 lang.submitby=Submitted by
 lang.pronounciation=Pronounciation
 lang.share=Share
