Enabled Yoruba translation

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -69,3 +69,22 @@ lang.about-tts=Audio Prompts: Hearing the Names
 lang.join-us-lex=Join us as a Lexicographer!
 lang.lets-build-together=Let's build up this database together
 lang.how-to-support=I would like to support you in some way… but how?
+
+
+lang.contact-info=Contact Information
+lang.contact-info-preamble=We're easy to get through to, whether in person or by mail.
+lang.contact-info-email-preamble=You may send an email to
+lang.contact-info-contact-preamble=Or visit our office at YorubaName.com
+lang.social-media=Follow us on Social Media
+
+lang.error-page-not-found=Oops. Sure you got the right link?
+lang.error-message1=It seems like we can't find the resource you're looking for, or it's been moved.
+lang.error-message2=Why not click here to go back to the <a href="/" style="color:#0e5264; text-decoration:underline">home page</a> to discover more Yoruba names?
+
+lang.oni-message=A phenomenal concept that will keep the Yorùbá culture alive. I strongly support the endeavor.
+lang.key-supporters=Our key supporters
+lang.yoruba-name-dictionary=Yoruba Names Dictionary
+
+lang.yoruba-name-newsletter=YorubaName Newsletter
+lang.follow-update=Follow us behind the scenes for exclusive news, freebies, links, lexicographer tools, and other important updates about this dictionary.
+lang.enter-your-email=Enter your email here
