--- a/website/src/main/resources/messages_yo.properties
+++ b/website/src/main/resources/messages_yo.properties
@@ -1,1 +1,89 @@
-lang.welcome=Eku Abo
+lang.welcome=Ẹ káàbọ̀
+lang.home=Ilé
+lang.about=Nípa Wa
+lang.donate=Rànwálọ́wọ́
+lang.volunteer=Darapọ̀ Mọ́ Wa
+lang.logreg=Forúkọ Sílẹ̀
+lang.contact=Kàn Sí Wa
+lang.blog=Búlọ́gì
+lang.language=Èdè
+lang.search-plchol=Tẹ Orúkọ Yorùbá tó bá wù ẹ́ síbí kí o sì tẹ “Enter”
+lang.jumbotron1=Ó ju
+lang.jumbotron2=Orùkọ Yorùbá lọ tí a ní níbí
+lang.kybtitle=Tẹ ibí fún bọ́tìnì alámì
+lang.adv-search=Àwárí Ìjìnlẹ̀
+lang.jumboh31=Darapọ̀ mọ́ àwọn olùlò yókù láti fi orúkọ mìíràn kún-un
+lang.jumboh32=Fún wa ní orúkọ kan
+lang.latest-search=Àwárí Tuntun
+lang.latest-add=Àfikún Tuntun
+lang.most-popular=Gbajúmọ̀ Orúkọ
+lang.most-popular-names=Àwọn Orúkọ Tó Gbajúmọ̀ Jù
+lang.name-of-day=Orúkọ Ojúmọ́
+lang.play-sound=Tẹ̀ láti gbọ́ ohùn
+lang.submitby=Ẹni tó fún wa ni
+lang.pronounciation=Sísọ síta
+lang.share=Fihànká
+lang.improve-entry=Tún orúkọ yìí ṣe
+lang.meaningof=Ìtumọọ
+lang.extendedmeaningof=Àwọn àlàyé mìíràn
+lang.storyof=Ìtàn díẹ̀ nípa orúkọ yìí
+lang.morphology=Ìtúpalẹ̀ Mọ́fímù
+lang.etymology=Ìtumọ̀ ẹyọ-ẹyọ
+lang.geolocation=Agbègbè
+lang.variants=Irúurú
+lang.see-also=Ẹ tún wo
+lang.entryfoundfor=A rí àwọn orúkọ fún -
+lang.commonin=Ó pọ̀ ní
+lang.number-of-names=Iye àwọn orúkọ
+lang.name-listed-by-alphabets=Awọn orúkọ tí a kọ ní A-B-D
+lang.famous-persons=Àwọn Ènìyàn Gbajúọ̀
+lang.media-links=Ibi tí a ti lè kà síi
+
+lang.submitname.heading=Fi orúkọ tuntun sílẹ̀
+lang.submitname.entername=Tẹ orúkọ tuntun síbí
+lang.submitname.enternameplch=Tẹ orúkọ tí a gbèrò ẹ síbí...
+lang.submitname.entermeaning=Ti o bá mọ̀, jọ̀ọ́ sọ ìtumọ̀ àti/tàbí ìtàn nípa orúkọ yìí
+lang.submitname.enterlocation=Níbo lo ti gbọ́ tàbí tí wọ́n ti wọ́n ti fún ẹ lórúkọ yìí.
+lang.submitname.enteremail=Àdírẹ́sì ímeèlì tí o fẹ́ ká ti sọ fún ẹ tí orúkọ yìí bá ti wọlé
+lang.submitname.nameexists=A ti ní orúkọ yìí tẹ́lẹ̀
+lang.submitname.viewentry=Wo Orúkọ
+
+lang.improve-entry.help-us=Bá wa ṣe àtúnṣe síi
+lang.improve-entry.sub-text=Bóyá o tiẹ̀ ní ìtàn kan láti sọ fún wa nípa orúkọ yìí, tàbí fún wa ní ǹkan tí a ṣì kọ, tàbí fikún oun kan tí a kọ sílẹ̀.
+
+lang.entry-not-found.no-match=Págà! A kò rí oun tó jọ
+lang.entry-not-found.suggest-text=Ǹjẹ́ o fẹ́ràn láti fi orúkọ kan kún àwọn orúkọ wa? Bá wa dáhùn àwọn ìbéèrè wọ̀nyí
+lang.entry-not-found.suggest-pretext= Ǹjẹ́ o fẹ́ràn láti fi orúkọ kún àwọn orúkọ wa?
+lang.entry-not-found.similar-names=Wò níbí àwọn orúkọ tó lè jọ ara wọn
+lang.go-to-suggest-linktext=Jọ̀ọ́ lọ sí abala ibi tí a ti ń forúkọ sílẹ̀.
+lang.entry-not-found.minikeyb-text=Jọ̀ọ́ lo oun ìtẹ̀wé Yorùbá tí a pèsè láti lo ààmì.
+
+lang.join-the-team=Darapọ̀ mọ́ wa
+lang.amazing-team=Àwọn Ọmọ Ẹgbẹ́ wa
+lang.what-is-yorubaname=Kíni YorubaName.com
+lang.how-to-use=Láti lo Dikṣọ́nárì Yìí
+lang.work-in-progress=Gbobo orúkọ̀ tó wà níbi jẹ́ Iṣẹ́-tí-a-ṣì-ńṣe- Lọ́wọ́
+lang.about-tone-mark=Ṣé ká fi ààmì síi tàbí bẹ́ẹ̀ kọ̀?
+lang.how-names-collected=Báwọ ni a ṣe ń gba àwọn orúkọ wọ̀nyí?
+lang.about-tts=Sísọ Síta: Gbígbọ́ Àwọn Orúkọ Wọ̀nyí
+lang.join-us-lex=Darapọ̀ Mọ́ Wa Gẹ́gẹ́ Bíi Onímọ̀ Ìjìnlẹ̀ Orúkọ
+lang.lets-build-together=Ẹ jẹ́ ká jọ mú orúkọ yìí kún papọ̀ 
+lang.how-to-support=Mo fẹ́ darapọ̀ pẹ̀lú yín lọ́nà kan tàbí òmíràn… ṣùgbọ́n báwo?
+
+lang.contact-info=Ibi tí ẹ ti lè kà sí wa
+lang.contact-info-preamble=Ó rọrùn láti kàn sí wa, bóyá nípa ara-sára tàbi nípa ímeèlì.
+lang.contact-info-email-preamble=Ẹ le fi ímeèlì ránṣẹ́ sí
+lang.contact-info-contact-preamble=Tàbí kàn sí ilé iṣẹ́ wa ní YorubaName.com
+lang.social-media=Ẹ tẹ̀lé wa lórí ẹ̀rọ ayélujára
+
+lang.error-page-not-found=Págà. Ǹjẹ́ o rò pé ọ̀nà tó tọ́ lo tẹ̀?
+lang.error-message1=Ó dàbíi pé a kò rí àwọn ǹkan tí o ń wá, tàbí wọ́n ti sún-un lọ síbòmíì.
+lang.error-message2=Oòṣe tẹ ibí yìí kí o padà sí <a href="/" style="color:#0e5264; text-decoration:underline">abala ilé</a> láti tún ṣàbápàdé àwọn orúkọ Yorùbá mìíràn?
+
+lang.oni-message=Iṣẹ́ gbògí tó ṣe pàtàki gidi tí yóò sì mú kí èdè Yorùbá tẹ̀síwájú ni. Mo faramọ́ọ gidigidi.
+lang.key-supporters=Àwọn agbèlẹ́yìn wa pàtàkì
+lang.yoruba-name-dictionary=Dikṣọ́nárì Orúkọ Yorùbá
+
+lang.yoruba-name-newsletter=Ìwé Ìròyìn YorubaName
+lang.follow-update=Follow us behind the scenes for exclusive news, freebies, links, lexicographer tools, and other important updates about this dictionary.
+lang.enter-your-email=Enter your email here
