--- a/website/src/main/resources/messages_yo.properties
+++ b/website/src/main/resources/messages_yo.properties
@@ -85,5 +85,5 @@ lang.key-supporters=Àwọn agbèlẹ́yìn wa pàtàkì
 lang.yoruba-name-dictionary=Dikṣọ́nárì Orúkọ Yorùbá
 
 lang.yoruba-name-newsletter=Ìwé Ìròyìn YorubaName
-lang.follow-update=Follow us behind the scenes for exclusive news, freebies, links, lexicographer tools, and other important updates about this dictionary.
-lang.enter-your-email=Enter your email here
+lang.follow-update=Tẹ̀lé wa wọlé láti gba ojúlówó ìròyìn, oun ọ̀fẹ́, ìsopọ̀, oun èlò àwọn onímọ̀ èdè, àti oríṣiríṣi ìròyìn pàtàkì nípa dikṣọ́nárì yìí.
+lang.enter-your-email=Tẹ orúkọ rẹ síbí
