pronounciation changed to pronunciation

--- a/website/src/main/resources/messages_yo.properties
+++ b/website/src/main/resources/messages_yo.properties
@@ -21,7 +21,7 @@ lang.most-popular-names=Àwọn Orúkọ Tó Gbajúmọ̀ Jù
 lang.name-of-day=Orúkọ Ojúmọ́
 lang.play-sound=Tẹ̀ láti gbọ́ ohùn
 lang.submitby=Ẹni tó fún wa ni
-lang.pronounciation=Sísọ síta
+lang.pronunciation=Sísọ síta
 lang.share=Fihànká
 lang.improve-entry=Tún orúkọ yìí ṣe
 lang.meaningof=Ìtumọọ
