Adding/updating some translations

--- a/website/src/main/resources/messages_yo.properties
+++ b/website/src/main/resources/messages_yo.properties
@@ -86,4 +86,4 @@ lang.yoruba-name-dictionary=Dikṣọ́nárì Orúkọ Yorùbá
 
 lang.yoruba-name-newsletter=Ìwé Ìròyìn YorubaName
 lang.follow-update=Tẹ̀lé wa wọlé láti gba ojúlówó ìròyìn, oun ọ̀fẹ́, ìsopọ̀, oun èlò àwọn onímọ̀ èdè, àti oríṣiríṣi ìròyìn pàtàkì nípa dikṣọ́nárì yìí.
-lang.enter-your-email=Tẹ orúkọ rẹ síbí
+lang.enter-your-email=Tẹ email rẹ síbí
