Include embedded videos with rounded edges. And hide word sections when section field is not populated for the word

--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -38,6 +38,7 @@ lang.number-of-names=Number of names
 lang.name-listed-by-alphabets=Names listed alphabetically
 lang.famous-persons=Famous Persons
 lang.media-links=Media Links
+lang.videos=Videos
 
 lang.submitname.heading=Submit a new name
 lang.submitname.entername=Enter new name here
