--- a/website/src/main/resources/messages_yo.properties
+++ b/website/src/main/resources/messages_yo.properties
@@ -38,6 +38,7 @@ lang.number-of-names=Iye àwọn orúkọ
 lang.name-listed-by-alphabets=Awọn orúkọ tí a kọ ní A-B-D
 lang.famous-persons=Àwọn Ènìyàn Gbajúọ̀
 lang.media-links=Ibi tí a ti lè kà síi
+lang.videos=Àwọn fídíò
 
 lang.submitname.heading=Fi orúkọ tuntun sílẹ̀
 lang.submitname.entername=Tẹ orúkọ tuntun síbí
