--- a/website/src/main/resources/messages.properties
+++ b/website/src/main/resources/messages.properties
@@ -85,6 +85,11 @@ lang.oni-message=A phenomenal concept that will keep the Yorùbá culture aliv
 lang.key-supporters=Our key supporters
 lang.yoruba-name-dictionary=Yoruba Names Dictionary
 
+lang.keyboard-software-cta-title=Buy Yorùbá Writing Software
+lang.keyboard-software-cta-text=In 2015, we released a YorubaName tonemarker which can help you write properly in Yorùbá with appropriate tone marks. You can now buy it here and download to your computer.
+lang.keyboard-software-cta-button-mac=For Mac
+lang.keyboard-software-cta-button-windows=For Windows
+
 lang.yoruba-name-newsletter=YorubaName Newsletter
 lang.follow-update=Follow us behind the scenes for exclusive news, freebies, links, lexicographer tools, and other important updates about this dictionary.
 lang.enter-your-email=Enter your email here
