Added some properties for the 'buy writing software' CTA

--- a/website/src/main/resources/messages_yo.properties
+++ b/website/src/main/resources/messages_yo.properties
@@ -84,6 +84,11 @@ lang.oni-message=Iṣẹ́ gbògí tó ṣe pàtàki gidi tí yóò sì
 lang.key-supporters=Àwọn agbèlẹ́yìn wa pàtàkì
 lang.yoruba-name-dictionary=Dikṣọ́nárì Orúkọ Yorùbá
 
+lang.keyboard-software-cta-title=Ra Oun Tí a Fi Ń Tẹ Ọ̀rọ̀ Yorùbá
+lang.keyboard-software-cta-text=Ní 2015, a gbé irin jáde láti YorubaName tí ẹ lè lò láti fi ààmì sí gbogbo ọ̀rọ̀ Yorùbá yín. Ẹ lè ràá níbí yìí báyìí., kí ẹ sì gbàá sínú kọ̀mpútà yín
+lang.keyboard-software-cta-button-mac=Fún Mac
+lang.keyboard-software-cta-button-windows=Fún Windows
+
 lang.yoruba-name-newsletter=Ìwé Ìròyìn YorubaName
 lang.follow-update=Tẹ̀lé wa wọlé láti gba ojúlówó ìròyìn, oun ọ̀fẹ́, ìsopọ̀, oun èlò àwọn onímọ̀ èdè, àti oríṣiríṣi ìròyìn pàtàkì nípa dikṣọ́nárì yìí.
 lang.enter-your-email=Tẹ email rẹ síbí
